# wasm-ndp-extractor

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.MD
include/wndpe/: wndpe.h
src/driver/: main.cpp
src/wndpe/: OutliningPass.cpp  wndpe.cpp
tests/outlining/: noop.input.wat
